test/should_pass/basic_017.grg
actions basic_017;

rule r {
	pattern {
		x : Node;
		y : Node;
		negative {
			x --> y : Node;
		}
	}
	replace {
		x;
	}
}

