test/should_fail/inh_attrib_006.grg
actions inh_attrib_006 using inh_attrib_model_006;

rule r {
	pattern {
	}
	replace {
	}
}

